--- a/src/app/album-list/album-list.component.html
+++ b/src/app/album-list/album-list.component.html
@@ -1,14 +1,15 @@
 
 
-<div *ngFor="let album of albums | async" class="f-row responsive box-dark">
-  <div class="f-col-4 bg-light">
+<div *ngFor="let album of albums | async" class="f-row responsive box-dark border">
+  <div class="f-col-4 bg-light box-light card">
     <div>
       <h1> {{album.albumName}}</h1>
       <h4>Artist: {{album.artistName}}</h4>
       <h4>${{album.currentAmount}} recieved out of ${{album.goal}}</h4>
+      <button (click)="clickDetails(album)">Details</button>
     </div>
   </div>
-  <div class="f-col-4 bg-light text-center">
+  <div class="f-col-4 bg-light text-center box-light card">
     <div>
       <img src="{{album.url}}" alt="album art" class="albumImg" />
     </div>
