--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,15 @@ body{
   max-width: 400px;
   max-height: 400px;
 }
+
+.border{
+  margin-bottom: 40px;
+}
+
+.support {
+  width: 20%;
+}
+
+.card {
+  margin: 30px;
+}
