add pipe to filter genre and add nav.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,21 @@
 <div class="container">
+<nav  class="nav-dark">
+<ul class="menu-items">
+  <li class="f-col-1 flex-center">
+    <a routerLink="/"><small class="f-col-3 flex-center">Home</small></a>
+  </li>
+  <li  class="f-col-1 flex-center">
+    <a routerLink="/new"><small class="f-col-3 flex-center">New Band</small></a>
+  </li>
+</ul>
+</nav>
+<br>
+<br>
   <h1>
     {{title}}
   </h1>
 
   <router-outlet></router-outlet>
+
 
 </div>
