--- a/src/app/album-list/album-list.component.html
+++ b/src/app/album-list/album-list.component.html
@@ -1,6 +1,20 @@
 
 
-<div *ngFor="let album of albums | async" class="f-row responsive box-dark border">
+
+<select (change)="onChange($event.target.value)" class="form-control">
+  <option value="allGenres">All Genres</option>
+  <option value="hardcore">Hardcore</option>
+  <option value="pop">Pop</option>
+  <option value="jazz">Jazz</option>
+  <option value="rock">Rock</option>
+  <option value="hipHop">Hip Hop</option>
+  <option value="world">World Music</option>
+  <option value="classical">Classical</option>
+  <option value="blues">Blues</option>
+  <option value="other">Other</option>
+</select>
+
+<div *ngFor="let album of albums | async | genre:filterByGenre" class="f-row responsive box-dark border">
   <div class="f-col-4 bg-light box-light card">
     <div>
       <h1> {{album.albumName}}</h1>
