--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <div class="container">
 <nav  class="nav-dark">
-<ul class="menu-items">
-  <li class="f-col-1 flex-center">
-    <a routerLink="/"><small class="f-col-3 flex-center">Home</small></a>
+<ul class="menu-items f-row">
+  <li routerLink="/" class="f-col-4 flex-center">
+    <small class="flex-center">Home</small>
   </li>
-  <li  class="f-col-1 flex-center">
-    <a routerLink="/new"><small class="f-col-3 flex-center">New Band</small></a>
+  <li routerLink="/new" class="f-col-4 flex-center">
+     <small class="flex-center">New Band</small>
+  </li>
+  <li routerLink="/admin" class="f-col-4 flex-center">
+     <small class="flex-center">Admin Login</small>
   </li>
 </ul>
 </nav>
