--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-<nav  class="nav-dark">
+<nav class="nav-dark">
   <ul class="menu-items f-row">
     <li routerLink="/" class="f-col-4 flex-center">
       <small class="flex-center">Home</small>
     </li>
     <li routerLink="/new" class="f-col-4 flex-center">
-       <small class="flex-center">New Band</small>
+       <small class="flex-center">New Album</small>
     </li>
     <li routerLink="/admin" class="f-col-4 flex-center">
        <small class="flex-center">Admin Login</small>
